<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="false">

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/intorCOlor"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_marginRight="5dp"
            android:textAlignment="center"
            android:text="@string/name" />
        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:textColorHint="@android:color/holo_red_light"
            android:hint="@string/hintName"
            android:layout_height="match_parent"
            android:layout_weight="10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:textSize="16sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAlignment="center"
        android:text="@string/designation" />
    <EditText
        android:id="@+id/designation"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:textColorHint="@android:color/holo_red_light"
        android:hint="@string/hintDesig"
        android:layout_height="match_parent"
        android:layout_weight="10"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="16sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:textAlignment="center"
            android:text="@string/email" />
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/holo_red_light"
            android:hint="@string/hintemail"
            android:layout_height="match_parent"
            android:layout_weight="10"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="16sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:textAlignment="center"
            android:text="@string/number"
            />
        <EditText
            android:id="@+id/number"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:textColorHint="@android:color/holo_red_light"
            android:hint="@string/hintNum"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_weight="10"/>
    </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="100dp"
        android:background="@drawable/logo"
        android:id="@+id/imageLogo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:text="@string/detail"
        android:layout_alignTop="@+id/imageLogo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:textColor="#3232c2"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/buttonText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:onClick="SubmitData"
        android:nestedScrollingEnabled="false"
        android:text="btn" />
</RelativeLayout>
</LinearLayout>
</ScrollView>