<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asheransari.businesscard.Card">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fetchName"
        android:textSize="26sp"
        android:text="M. Asher Ansari"
        android:fontFamily="serif"
        android:textAlignment="viewEnd"
        style="@android:style/TextAppearance.Holo.Widget.TextView"
        android:paddingRight="150dp"
        android:textStyle="bold"
        android:textColor="@color/colorName"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/fetchDesignation"
        android:layout_height="wrap_content"
        android:text="Assistant General Officer"
        android:textSize="20sp"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorDesignation"
        android:paddingRight="150dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_alignParentEnd="true">
        
        <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="3"
            android:layout_marginLeft="40dp"
            android:src="@drawable/logo"
            android:layout_gravity="bottom|left"/>

            <View
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:background="@color/ViewColor"
                android:layout_gravity="bottom|end"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="8"
                android:layout_marginLeft="15dp"
                android:orientation="vertical"
                android:layout_gravity="bottom|end">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/nameColor"
                    android:text="@string/nameCard"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/address"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/details"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/UanNumber"
                        android:layout_height="wrap_content"
                        android:textColor="@color/details"
                        android:textSize="14sp"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_weight=".04"
                        android:layout_height="match_parent"
                        android:background="@color/nameColor"/>
                    <TextView
                        android:text="@string/pabxNumber"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/FaxNumber"
                        android:layout_height="wrap_content"
                        android:textColor="@color/details"
                        android:textSize="13sp"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_weight=".04"
                        android:layout_height="match_parent"
                        android:background="@color/nameColor"/>
                    <TextView
                        android:id="@+id/cellNumber"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:text="Cell: 0313-3085683"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fetchEmail"
                    android:text="Email: asher.ansari@nhu.edu.pk"
                    android:textSize="14sp"
                    android:textColor="@color/details"
                    />

            </LinearLayout>
    </LinearLayout>

</LinearLayout>
